# fisicai

./: .gitignore  CONTRIBUTING.md  README.md  pyproject.toml
.github/ISSUE_TEMPLATE/: hepabench-task-proposal.md  physics-correctness-bug.md
.github/workflows/: ci.yml  deploy-site.yml  release.yml
analyses/zmumu_z_mass/: README.md  analysis.py
analyses/zmumu_z_mass/note/: hepnote.sty  note.tex  references.bib
analyses/zmumu_z_mass/results/: results.json  results.tex
examples/: reinterpret_sbottom.md
hepabench_results/: README.md
hepabench_results/atlas_multib_cls/: answer.json
hepabench_results/literature_stop_4body/: answer.json
hepabench_results/opendata_zmumu/: answer.json
hepabench_results/toy_cls/: answer.json
scripts/: make_zmumu_skim.py
site/: wrangler.jsonc
site/public/: index.html
src/fisicai/: __init__.py  agent.py  cli.py  mcp_server.py  writeup.py
src/fisicai/hepabench/: __init__.py  bundle.py  cli.py
src/fisicai/hepabench/data/opendata_zmumu/: zmumu_skim.root
src/fisicai/hepabench/data/toy_cls/: BkgOnly.json
src/fisicai/hepabench/tasks/: atlas_multib_cls.yaml  literature_stop_4body.yaml  opendata_zmumu.yaml  toy_cls.yaml
src/fisicai/skills/: analysis-writeup.md  cutflow.md  literature.md  reinterpretation.md
src/fisicai/templates/: hepnote.sty  note_template.tex
src/fisicai/tools/: __init__.py  arxiv.py  hepdata.py  inspire.py  pyhf_tools.py
tests/: test_arxiv.py  test_bundle_validator.py  test_cli.py  test_hepabench.py  test_inspire.py  test_mcp_server.py  test_opendata_zmumu.py  test_pyhf_tools.py  test_writeup.py
