[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "fisicai"
version = "0.1.0"
description = "An open-source agentic harness for high-energy physics: literature, data, statistics, and real reinterpretation of LHC searches."
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.11"
authors = [{ name = "Diogo de Bastos" }]
keywords = ["physics", "hep", "agent", "ai", "pyhf", "reinterpretation", "lhc"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Physics",
]
dependencies = [
    "claude-agent-sdk>=0.2",
    "mcp>=1.0",
    "httpx>=0.27",
    "pyhf[contrib]>=0.7.6",
    "uproot>=5",
    "awkward>=2",
    "vector>=1",
    "aiohttp>=3.9",
    "hist>=2",
    "matplotlib>=3.8",
    "mplhep>=1",
    "scipy>=1.11",
    "pyyaml>=6",
]

[project.optional-dependencies]
dev = ["pytest>=8", "ruff>=0.4"]

[project.scripts]
fisicai = "fisicai.cli:main"
fisicai-mcp = "fisicai.mcp_server:main"
hepabench = "fisicai.hepabench.cli:main"

[project.urls]
Homepage = "https://github.com/diogodebastos/fisicai"

[tool.hatch.build.targets.wheel]
packages = ["src/fisicai"]

[tool.ruff]
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
